# agentbuilder-class4-kpavansrinivas

./: .gitignore  README.md  nl_sql_pipeline.ipynb  pyproject.toml  requirements.txt  vehicle_specs.json
homework-1/: homework_1_agent.ipynb  homework_pipeline_to_agent.ipynb
