[project]
name = "agentbuilder-class4-nlsql"
version = "0.1.0"
description = "NL-to-SQL pipeline + multi-tool agent notebooks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyterlab>=4.5.7",
    "langchain>=1.3.0",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.1",
    "matplotlib>=3.10.9",
    "nbformat>=5.10.4",
    "notebook>=7.5.6",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.2",
]
